# aeon_docs

./: .buildinfo  .gitignore  .gitmodules  404.html  CITATION.cff  CNAME  DeviceTemplate.md  Doxyfile  Makefile  README.md  api.html  copy_examples_to_src.py  data_contract.html  design_considerations.html  environment.yml  genindex.html  glossary.html  index.html  make.bat  make_acquisition_doctree.py  make_api_doctree.py  make_mecha_doctree.py  make_people_list.py  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.txt  robots.txt  search.html  searchindex.js  sitemap.xml
.bonsai/: Bonsai.config  NuGet.config
.github/: dependabot.yml
404/: index.html
Alerts/: alerts.md  synchronizerMonitor.md
Infrastructure/: GeneralExperimentalWorkflow.md
Logging/: LogData.md  LogHarpState.md  LogVideo.md
SoftwareDevices/: SoftModules.md
_modules/: index.html
_sources/: api.rst.txt  data_contract.md.txt  index.md.txt  index.rst.txt
_static/: documentation_options.js
_workflows/: patchDispenser.bonsai
about/: code_of_conduct.html  design_considerations.html  index.html  license.html  people.html  publications.html
api/: aeon.analysis.movies.html  aeon.analysis.plotting.html  aeon.analysis.utils.html  aeon.io.api.html  aeon.io.device.html  aeon.io.reader.html  aeon.io.video.html  aeon.schema.core.html  aeon.schema.dataset.html  aeon.schema.foraging.html  aeon.schema.octagon.html  aeon.schema.social.html  aeon.util.html
contributor/: contributing_code.html  contributing_documentation.html  index.html  style_and_doc_guidelines.html
(+1132 files in other folders)
